# MASTER-2-HPC-INTERNSHIP

GPU-SYCL-INTERNSHIP/: CMakeLists.txt
GPU-SYCL-INTERNSHIP/src/: dgetrf_util.cpp  runtime_seq.cpp
GPU_SYCL-main/: README.md
GPU_SYCL-main/src/: dgetrf.cpp  matrix.cpp  runtime_sycl.cpp
GPU_SYCL/src/: runtime_omp.cpp
MASTER-2-HPC-INTERNSHIP/src/: .runtime_sycl.cpp.swp  mini_lu.cpp
